# AdaptiveCommonNeighborAnalysis

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  plugin.json  vpm.json
scripts/: cna_plugin_wrapper.py
src/: plugin.cpp
src/analysis/: cna_analysis.cpp  cna_classifier.cpp  cna_service.cpp  cna_structure_analysis.cpp
src/topology/: crystal_coordination_topology.cpp
